--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   geolocator: ^13.0.1
   permission_handler: ^10.2.0
+  http: ^1.2.2
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -61,8 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+  - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
